--- a/css-style/3-columns-st.css
+++ b/css-style/3-columns-st.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0%;
+}
+
 :root { 
     --Brightorange: hsl(31, 77%, 52%);
     --Darkcyan: hsl(184, 100%, 22%);
@@ -148,7 +152,7 @@ footer {
     padding: 20px 0 20px 0;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
    .three-columns {
     display:flex;
     flex-direction: column;
